StoryChecker added